fixed the overflow issue on code area

--- a/Frontend/src/pages/review/review.css
+++ b/Frontend/src/pages/review/review.css
@@ -31,7 +31,6 @@ main .left {
   border-radius: 0.7rem;
   border: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  overflow: auto;
 }
 main .left .review {
   position: absolute;
